2017-09-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (modify_binary): Fix for 64-bit machine.
	* src/openpgp-do.c (encrypt, decrypt): Likewise.
	(gpg_data_scan): Likewise.
	(gpg_do_chks_prvkey): Fix error return path.

	* src/stack-def.h: New.

	* src/gnuk.ld.in: Remove stack definitions.
	* src/configure: Remove stack size modifications.

	* src/main.c (STACK_MAIN, STACK_PROCESS_1): Use stack-def.h.
	* src/usb-ccid.c (STACK_PROCESS_3): Likewise.
	* src/usb-msc.c (STACK_PROCESS_5): Likewise.
	* src/pin-cir.c (STACK_PROCESS_6, STACK_PROCESS_7): Likewise.

	* src/usb_ctrl.c (download_check_crc32): Use chrc32_rv_ functions.

	* src/mcu-stm32f103.c (rbit, check_crc32): Remove.

	* src/neug.c: Update from NeuG.
	* src/neug.h: Ditto.

2017-09-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/ec_p256k1.c (coefficient_a): Remove.

	* library/bignum.c (mpi_fill_pseudo_random): Fix for 64-bit.

	* src/call-rsa.c (rsa_decrypt): Fix for 64-bit machine.

	* src/flash.c (flash_do_storage_init): Rename from flash_init.
	(flash_key_storage_init): Rename from flash_init_keys.
	* src/openpgp.c (gpg_init): Use new function names.

	* src/stdlib.h: Update for GNU/Linux emulation.

	* src/Makefile: Support GNU/Linux emulation.
	* src/configure: Support GNU/Linux emulation.
	* emulation: Remove.

2017-08-11  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.5.
	* chopstx: Update to 1.4.

	* src/gnuk.ld.in (__process3_stack_size__): Tweak the size.

	* src/configure: Define STM32F103_OVERRIDE_FLASH_SIZE_KB for
	BULE_PILL.

	* src/configure: Let generate src/config.mk.
	* src/Makefile: Rename from src/Makefile.in.
	* regnual/Makefile: Use src/config.mk.

2017-08-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_terminate_df): Fix for admin-less mode.

2017-08-03  Jeremy Drake <jeremydrake+gnuk@eacceleration.com>

	* regnual/regnual.c (main): Allow compile time
	flash size definition by STM32F103_OVERRIDE_FLASH_SIZE_KB.
